grpc-interceptor/envoy-resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: triton-run2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: triton-run2
  template:
    metadata:
      labels:
        app: triton-run2
    spec:
      containers:
      - name: envoy
        image: envoyproxy/envoy:v1.30-latest
        args:
          - "--config-path"
          - "/etc/envoy/envoy.yaml"
          - "--log-level"
          - "info"
          - "--log-path"
          - "/dev/stdout"
        ports:
        # - containerPort: 8000
        - containerPort: 8001
        # - containerPort: 8002
        volumeMounts:
        - name: envoy-config
          mountPath: /etc/envoy
        - name: lua-volume
          mountPath: /etc/envoy/lua
          readOnly: true
        resources:
          requests:
            cpu: "500m"  
            memory: "256Mi"  
          limits:
            cpu: "1"
            memory: "512Mi"  
      volumes:
      - name: envoy-config
        configMap:
          name: envoy-config
      - name: lua-volume
        configMap:
          name: lua-config
          items:
          - key: envoy-filter.lua
            path: envoy-filter.lua
---
apiVersion: v1
kind: Service
metadata:
  name: triton-run2
spec:
  type: LoadBalancer
  selector:
    app: triton-run2
  ports:
    # - name: http
    #   port: 8000
    #   targetPort: 8000
    - name: grpc
      port: 8001
      targetPort: 8001
    # - name: metrics
    #   port: 8002
    #   targetPort: 8002
