grpc-interceptor/sonic-metrics.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonic-metrics
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonic-metrics
  template:
    metadata:
      labels:
        app: sonic-metrics
    spec:
      containers:
      - name: sonic-metrics
        image: geddes-registry.rcac.purdue.edu/cms/sonic-metrics:0.1
        ports:
        - containerPort: 8002

---
apiVersion: v1
kind: Service
metadata:
  name: sonic-metrics
  labels:
    scrape-metrics: "true"
spec:
  selector:
    app: sonic-metrics
  ports:
  - protocol: TCP
    port: 8002
    targetPort: 8002
